[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuctool"
version = "0.1.0"
description = "Chromatin fiber simulation and nucleosome dyad prediction toolkit"
readme = "README.md"
authors = [
    {name = "John van Noort"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["chromatin", "nucleosome", "bioinformatics", "epigenetics", "machine-learning"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
    "snapgene_reader",
    "numba",
    "icecream",
    "genomepy",
    "biopython",
    "torch",
    "scikit-learn",
    "h5py",
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "ipywidgets",
]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/JvN2/NucTool"
Repository = "https://github.com/JvN2/NucTool"
Issues = "https://github.com/JvN2/NucTool/issues"

[tool.setuptools]
packages = ["nuctool"]

[tool.setuptools.package-data]
nuctool = ["*.md"]
